--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+allure-pytest==2.9.43
+allure-python-commons==2.9.43
 atomicwrites==1.4.0
 attrs==21.2.0
 certifi==2021.5.30
@@ -11,5 +13,6 @@ py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
 requests==2.26.0
+six==1.16.0
 toml==0.10.2
 urllib3==1.26.6
